# webrtc_vad

./: .gitmodules  CMakeLists.txt  README.md  main.c
