CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(webrtc_vad)

SET(CMAKE_CXX_STANDARD 11)
ADD_DEFINITIONS(-g)


SET(WEBRTC_SOURCE_DIR ${PROJECT_SOURCE_DIR}/webrtc)
SET(VAD_SOURCE_DIR ${WEBRTC_SOURCE_DIR}/common_audio/vad)
SET(SIGNAL_SOURCE_DIR ${WEBRTC_SOURCE_DIR}/common_audio/vad)
SET(RTC_BASE_SOURCE_DIR ${WEBRTC_SOURCE_DIR}/rtc_base)

FILE(GLOB VAD_SOURCE_FILES
    ${VAD_SOURCE_DIR}/vad_core.c
    ${VAD_SOURCE_DIR}/vad_filterbank.c
    ${VAD_SOURCE_DIR}/vad_gmm.c
    ${VAD_SOURCE_DIR}/vad_sp.c
    ${VAD_SOURCE_DIR}/vad.cc
    ${VAD_SOURCE_DIR}/webrtc_vad.c
    ${SIGNAL_SOURCE_DIR}/*.c
    ${RTC_BASE_SOURCE_DIR}/*.c
)

INCLUDE_DIRECTORIES(
    ${WEBRTC_SOURCE_DIR}
)

ADD_LIBRARY(webrtc_vad SHARED ${VAD_SOURCE_FILES})
